# nixos-search-queries

./: .gitignore  LICENSE  README.md  baseline.json  docker-compose.yml  flake.nix  pyproject.toml
docs/: app.js  data.json  index.html  styles.css
queries/: queries.json
scripts/: build_site.py  tune.py
searcheval/: __init__.py  cli.py  fetch_corpus.py  harness.py  metrics.py  report.py  schema.py  site.py  stats.py
searcheval/engines/: __init__.py  base.py  elasticsearch.py  quickwit.py  typesense.py
tests/: test_engines.py  test_harness.py  test_metrics.py  test_queryset.py  test_report.py  test_schema.py  test_site.py  test_stats.py
