[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "searcheval"
version = "0.1.0"
description = "Reproducible evaluation harness comparing Elasticsearch and Typesense over NixOS packages and options"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
# Only scripts/fetch_corpus needs to decompress .br channel dumps. The brotli
# CLI (nix-shell -p brotli) works as an alternative, so this stays optional.
fetch = ["brotli>=1.1"]
dev = ["pytest>=8"]

[project.scripts]
searcheval = "searcheval.cli:main"
searcheval-fetch-corpus = "searcheval.fetch_corpus:main"

[tool.hatch.build.targets.wheel]
packages = ["searcheval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
